--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "express-typescript-server",
   "version": "1.0.0",
   "description": "Node JS Server using Express and Typescript",
-  "main": "/dist/index.js",
+  "main": "index.js",
   "scripts": {
     "build": "npx tsc",
     "start": "node ./dist/index.js",
@@ -20,13 +20,20 @@
   "homepage": "https://github.com/or-abdillh/express-typescript-server#readme",
   "dependencies": {
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "module-alias": "^2.2.3"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/node": "^20.5.9",
     "concurrently": "^8.2.1",
     "nodemon": "^3.0.1",
     "typescript": "^5.2.2"
+  },
+  "_moduleAliases": {
+    "@": "dist/src",
+    "@controller": "dist/src/controllers",
+    "@ts": "dist/src/ts"
   }
 }
