--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node ./dist/index.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q ./dist/\""
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q ./dist/\"",
+    "db:migrate": "npx prisma migrate dev "
   },
   "repository": {
     "type": "git",
@@ -19,16 +20,23 @@
   },
   "homepage": "https://github.com/or-abdillh/express-typescript-server#readme",
   "dependencies": {
+    "@prisma/client": "^5.2.0",
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "module-alias": "^2.2.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/node": "^20.5.9",
     "concurrently": "^8.2.1",
     "nodemon": "^3.0.1",
+    "prisma": "^5.2.0",
+    "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
   "_moduleAliases": {
