--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
     "module-alias": "^2.2.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.5.9",
     "concurrently": "^8.2.1",
     "nodemon": "^3.0.1",
