--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "npx tsc",
     "start": "node ./dist/index.js",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q ./dist/\"",
-    "db:migrate": "npx prisma migrate dev "
+    "db:migrate": "npx prisma migrate dev",
+    "db:seeder": "ts-node -r tsconfig-paths/register prisma/seeders/seeder.ts"
   },
   "repository": {
     "type": "git",
@@ -39,6 +40,7 @@
     "nodemon": "^3.0.1",
     "prisma": "^5.2.0",
     "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.2.2"
   },
   "_moduleAliases": {
