--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,6 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["src/**/*.ts", "config/**/*.ts", "index.ts"],
+  "include": ["src/**/*.ts", "config/**/*.ts", "prisma/**/*.ts", "index.ts"],
   "exclude": ["node_modules"]
 }
